ingress-alb.yaml
#  (use on EKS with AWS Load Balancer Controller

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: md-blog-alb
  namespace: blog
  labels:
    app: md-blog
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    # external-dns.alpha.kubernetes.io/hostname: blog.example.com   # optional
spec:
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: md-blog
                port:
                  number: 80
